<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/conn_name"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ftp_host"
        android:inputType="textUri"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ftp_port"
        android:inputType="number"
        android:text="21"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/conn_path"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ftp_user"
        android:inputType="text"
        android:text="anonymous"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ftp_pass"
        android:inputType="textPassword"
        android:importantForAutofill="no" />
</LinearLayout>
